2006-01-15  Christopher Aillon  <caillon@redhat.com>

	* gobject/gobjectmodule.c (pyg_strv_to_gvalue):
	Don't call g_value_init since the other *_to_gvalue
	methods expect an already inited GValue

2006-01-11  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.8.4 ===
2006-01-11  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update.

	* Makefile.am: Only install pygtk.pth if we're building gobject.

2006-01-10  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk-types.defs (IconView): should implement gtk.CellLayout

2006-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* Makefile.am,
	* configure.in,
	* gtk/Makefile.am,
	* tests/Makefile.am: Fix pygobject check; Add external pygobject
	include dir to include path instead of the internal one if
	compiling with pygobject 2.9.

	* Makefile.am: Don't build or install gobject bindings if
	pygobject >= 2.9 was found.

	* configure.in: Check for pygobject 2.9; create an AM conditional
	based on it.

=== PyGTK 2.8.3 ===
2006-01-04  Cedric Gustin  <cedric.gustin@gmail.com>

	* dsextras.py (Template.generate): Pass GLOBAL_MACROS (in
	particular HAVE_PYCAIRO) to codegen DefsParser.
	* setup.py: If pangocairo is enabled, add pycairo to the list of
	packages required to build the GTK+ module. Also set HAVE_PYCAIRO.

2005-12-24  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygflags.c (pyg_flags_add): Tolerate module == NULL,
	which may happen when called from pyg_flags_from_gtype if a
	wrapper for the GFlags was not registered.

2005-11-15  Johan Dahlin  <johan@gnome.org>

	* gobject/pygobject.c (pygobject_new_with_interfaces): We always
	need to free interfaces since its a null terminated array.

2005-11-13  Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c (pyg_type_register): Remove deprecation
	warning.
	
2005-11-13  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.defs (gtk_image_new_from_stock)
	(gtk_image_new_from_icon_set, image_new_from_animation)