@@ -1,3 +1,14 @@
+2006-01-19  Johan Dahlin  <jdahlin@async.com.br>
+
+	* examples/Makefile.am:
+	Install examples
+	
+	* examples/gtk/widget.py:
+	Call unrealize too
+	
+	* examples/gtk/scrollable.py: 
+	Add example of a scrollable widget
+
 2006-01-15  Christopher Aillon  <caillon@redhat.com>
 
 	* gobject/gobjectmodule.c (pyg_strv_to_gvalue):
